# EFIGenieSTM32F103C

./: .gitmodules  .mxproject  CMakeLists.txt  CMakePresets.json  EFIGenieSTM32F103C.gpdsc  EFIGenieSTM32F103C.ioc  Makefile  README.md  STM32F103C8Tx_FLASH.ld  STM32F103C8Tx_Toolchain.cmake  STM32F103C8Tx_Toolchain_Optimize.cmake  STM32F103CBTx_FLASH.ld  STM32F103CBTx_Toolchain.cmake  STM32F103CBTx_Toolchain_Optimize.cmake  Serial.py
Inc/: stm32f1xx_hal_conf.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
Src/: Entry.cpp  Stm32HalAnalogService.cpp  Stm32HalTimer.cpp  Stm32HalTimerService.cpp  main.c  stm32f1xx_hal_msp.c  usb_device.c  usbd_cdc_if.c  usbd_conf.c
